...
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="40dp"
        android:baselineAligned="false"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btn_choose_calculator"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/btn_choose"
            android:text="@string/btnChooseCalculator"
            android:textColor="@android:color/white"
            android:textSize="20dp"
...
